--- a/WebContent/css/artisan.css
+++ b/WebContent/css/artisan.css
@@ -134,7 +134,7 @@ a {
 /* Allow minimum height, except on small devices */
 @media (min-width: 768px) {
     .colorbar {
-        min-height: 700px;
+        min-height: 750px;
     }
 }
 
@@ -223,6 +223,7 @@ a {
     width: 100%;
     border: 1px solid #444;
     border-radius: 4px;
+    background-color: white;
 }
 
 /* PARTNERS */
