--- a/WebContent/css/artisan.css
+++ b/WebContent/css/artisan.css
@@ -1,31 +1,32 @@
 body {
     font-family: verdana, tahoma, sans;
-    font-size: small;
+    font-size: medium;
     background-color: rgb(102, 102, 102);
-    margin-top: 75px;
+}
+
+em {
+    font-size: medium;
+    font-weight: bold;
+    font-style: italic;
+}
+
+ul {
+    margin-left: 25px;
 }
 
 .container {
-    /*background-color: #f1f5e7;*/
+    background-color: rgb(255, 255, 240);
+    padding: 30px;
 }
 
-.navbar {
-    border-bottom-width: 0px;
+.slogan {
+    font-size: x-large;
+    font-weight: 550;
 }
 
-.intro {
-    background-color: #f8f8e8;
-}
-
-.intro .text {
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.intro .contact {
+.contact {
     margin-top: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-bottom: 20px;
     padding: 10px 10px 10px 15px;
     border: solid 1px #ccc;
     border-radius: 5px;
@@ -57,8 +58,8 @@ body {
 }
 
 .bio-pic {
-    border: 1px solid #888888;
-    border-radius: 5px;
+    border: 2px solid #444;
+    border-radius: 10px;
     width: 100%;
 }
 
@@ -112,13 +113,54 @@ a {
 }
 
 .status-available {
-    color: #7a0000;
+    color: #007a00;
     font-weight: bold;
 }
 
 .status-working {
     color: #7a4812;
     font-weight: bold;
+}
+
+.resume-link {
+    text-decoration: none;
+    font-weight: bold;
+    color: #007a00;
+}
+
+.pitch {
+    margin-left: 50px;
+    margin-right: 75px;
+}
+
+.clients {
+    margin-left: 50px;
+    margin-right: 75px;
+    background-color: rgb(255, 238, 169);
+    padding: 20px;
+    border: solid 1px #ccc;
+    border-radius: 10px;
+}
+
+.client-card {
+    max-width: 45%;
+    border: solid 1px #ccc;
+    border-radius: 10px;
+    background-color: white;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
+
+.client-logo {
+    max-height: 100px;
+    text-align: center;
+    border-radius: 10px 10px 0 0;
+}
+
+.project-summary {
+    margin: 8px 40px 0 40px;
+    color: black;
+    text-decoration: none;
 }
 
 /* CONTENT ON HOME PAGE */
@@ -138,65 +180,7 @@ a {
     }
 }
 
-/* WHAT I OFFER */
-.what {
-    background-color: #caa434;
-    /*border-top-left-radius: 5px;*/
-    /*border-bottom-left-radius: 5px;*/
-    padding: 5px;
-}
-
-.what .panel-group {
-    margin-top: -10px;
-    padding: 20px;
-}
-
-.what h2 {
-    font-family: Prociono, Serif;
-}
-
-/*.what .indent {*/
-    /*margin-left: 5px;*/
-/*}*/
-
-/*.what a {*/
-    /*text-decoration: none;*/
-/*}*/
-
-.what .panel-default a {
-    text-decoration: none;
-}
-
-.what .panel-default a:hover {
-    text-decoration: none;
-    /*width: 100%;*/
-    /*padding: 10px;*/
-    /*border-color: #444;*/
-    /*border-radius: 5px;*/
-}
-
-.what .panel-title {
-    font-family: Prociono, Serif;
-    font-size: large;
-    font-style: normal;
-    width: 100%;
-    /*background-color: #ddd;*/
-    color: #666;
-    /*border: 1px solid #444;*/
-    /*border-radius: 5px;*/
-}
-
-.what .panel-heading:hover {
-    background-color: #bbb;
-    color: #444;
-}
-
 /* CLIENTS */
-.clients {
-    background-color: #4dc13c;
-    padding: 5px;
-}
-
 .clients h2 {
     font-family: Prociono, Serif;
 }
@@ -219,12 +203,12 @@ a {
     border-radius: 5px;
 }
 
-.clients .client-logo {
-    width: 100%;
-    border: 1px solid #444;
-    border-radius: 4px;
-    background-color: white;
-}
+/*.clients .client-logo {*/
+/*    width: 100%;*/
+/*    border: 1px solid #444;*/
+/*    border-radius: 4px;*/
+/*    background-color: white;*/
+/*}*/
 
 /* PARTNERS */
 .partners {
