--- a/WebContent/css/artisan.css
+++ b/WebContent/css/artisan.css
@@ -14,6 +14,10 @@ ul {
     margin-left: 25px;
 }
 
+h1 {
+    margin-top: 50px;
+}
+
 .container {
     background-color: rgb(255, 255, 240);
     padding: 30px;
@@ -147,7 +151,7 @@ a {
     border: solid 1px #ccc;
     border-radius: 10px;
     background-color: white;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     padding-bottom: 20px;
 }
 
@@ -155,6 +159,23 @@ a {
     max-height: 100px;
     text-align: center;
     border-radius: 10px 10px 0 0;
+    background-color: white;
+}
+
+.logo-card {
+    width: 30%;
+    height: 90px;
+    border: solid 1px #ccc;
+    border-radius: 10px;
+    background-color: white;
+    margin-bottom: 25px;
+}
+
+.logo-only {
+    max-height: 100px;
+    width: 100%;
+    text-align: center;
+    border-radius: 10px;
 }
 
 .project-summary {
