--- a/WebContent/css/artisan.css
+++ b/WebContent/css/artisan.css
@@ -1,7 +1,7 @@
 body {
     font-family: verdana, tahoma, sans;
     font-size: medium;
-    background-color: rgb(102, 102, 102);
+    /*background-color: rgb(102, 102, 102);*/
 }
 
 em {
@@ -20,6 +20,7 @@ h1 {
 
 .container {
     background-color: rgb(255, 255, 240);
+    /*min-width: 100%;*/
     padding: 30px;
 }
 
@@ -36,26 +37,26 @@ h1 {
     border-radius: 5px;
 }
 
-@media (min-width: 768px) {
-    .intro .contact {
-        margin-left: 50px;
-        margin-right: 100px;
-    }
-}
+/*@media (min-width: 768px) {*/
+/*    .intro .contact {*/
+/*        margin-left: 50px;*/
+/*        margin-right: 100px;*/
+/*    }*/
+/*}*/
 
-@media (min-width: 992px) {
-    .intro .contact {
-        margin-left: 50px;
-        margin-right: 200px;
-    }
-}
+/*@media (min-width: 992px) {*/
+/*    .intro .contact {*/
+/*        margin-left: 50px;*/
+/*        margin-right: 200px;*/
+/*    }*/
+/*}*/
 
-@media (min-width: 1200px) {
-    .intro .contact {
-        margin-left: 50px;
-        margin-right: 300px;
-    }
-}
+/*@media (min-width: 1200px) {*/
+/*    .intro .contact {*/
+/*        margin-left: 50px;*/
+/*        margin-right: 300px;*/
+/*    }*/
+/*}*/
 
 .photo {
     padding: 20px;
@@ -140,6 +141,7 @@ a {
 .clients {
     margin-left: 50px;
     margin-right: 75px;
+    margin-bottom: 40px;
     background-color: rgb(255, 238, 169);
     padding: 20px;
     border: solid 1px #ccc;
@@ -184,6 +186,37 @@ a {
     text-decoration: none;
 }
 
+.partners {
+    background-color: #ffbf78;
+    margin-left: 50px;
+    margin-right: 75px;
+    padding: 20px;
+    border: solid 1px #ccc;
+    border-radius: 10px;
+}
+
+.partner-card {
+    max-width: 45%;
+    border: solid 1px #ccc;
+    border-radius: 10px;
+    background-color: white;
+    margin-bottom: 25px;
+    padding-bottom: 20px;
+}
+
+.partner-logo {
+    max-height: 100px;
+    text-align: center;
+    border-radius: 10px 10px 0 0;
+    background-color: white;
+}
+
+.partner-summary {
+    margin: 10px 40px 0 40px;
+    color: black;
+    text-decoration: none;
+}
+
 /* CONTENT ON HOME PAGE */
 .intro h1 {
     font-family: Prociono, Serif;
@@ -194,77 +227,13 @@ a {
     text-align: center;
 }
 
-/* Allow minimum height, except on small devices */
+/* Allow minimum height, except on small devices
 @media (min-width: 768px) {
     .colorbar {
         min-height: 750px;
     }
 }
-
-/* CLIENTS */
-.clients h2 {
-    font-family: Prociono, Serif;
-}
-
-.clients .indent {
-    margin-left: 5px;
-}
-
-.clients a {
-    text-decoration: none;
-}
-
-.clients p.link {
-    width: 100%;
-    /*font-family: Prociono, Serif;*/
-    /*font-size: large;*/
-    padding: 10px;
-    /*background-color: #ddd;*/
-    /*color: #666;*/
-    border-radius: 5px;
-}
-
-/*.clients .client-logo {*/
-/*    width: 100%;*/
-/*    border: 1px solid #444;*/
-/*    border-radius: 4px;*/
-/*    background-color: white;*/
-/*}*/
-
-/* PARTNERS */
-.partners {
-    background-color: #568eea;
-    padding: 5px;
-}
-
-.partners h2 {
-    font-family: Prociono, Serif;
-}
-
-.partners .indent {
-    margin-left: 5px;
-}
-
-.partners a {
-    text-decoration: none;
-}
-
-.partners p.link {
-    width: 100%;
-    /*font-family: Prociono, Serif;*/
-    /*font-size: large;*/
-    padding: 10px;
-    /*background-color: #cde877;*/
-    border-radius: 5px;
-}
-
-.partners .partner-logo {
-    width: 100%;
-    border: 1px solid #444;
-    border-radius: 4px;
-}
-
-/* UNFINISHED */
+*/
 .unfinished {
     display: none;
 }
